# bagel

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
bagel/: Cargo.toml
bagel/src/: internal_macros.rs  lib.rs  macros.rs
bagel/src/constdef_impls/: alloc.rs  core.rs  mod.rs  primitive.rs
bagel/tests/: all.rs
dough/: Cargo.toml
dough/src/: lib.rs  macros.rs  util.rs
dough/src/constdef/: mod.rs  type_processor.rs  utils.rs
examples/: mixed.rs
