[package]
name = "dough"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
description = "Internal macros for the bagel crate"
documentation = "https://docs.rs/bagel"
repository = "https://github.com/skytable/bagel"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
lazy_static = "1.4.0"
